--- a/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
@@ -459,53 +459,53 @@ romania.58.t:0 "[From.GetName] Rejects our Peace Offer!"
 romania.58.d:0 "The [From.GetAdjective] leadership refuses to recognise the dire situation they're in and have refused our fair peace offer."
 romania.58.a:0 "Then we'll march to Bucharest!"
 
-romania.59.t:0 "Ukraine is Defeated"
+romania.59.t:0 "우크라이나가 패전했습니다"
 romania.59.d:0 "We have successfully liberated the Romanian ancestral lands of Transnistria. The Ukrainian military situation is dire, and we can offer them peace, which they will probably accept. The question is if we outright conquer Transnistria or leave it under nominal Ukrainian control and set up a demilitarised zone."
-romania.59.a:0 "Transnistria remains in Ukraine but must be demilitarised."
-romania.59.b:0 "Transnistria is ours!"
-romania.59.c:0 "This is only the beginning."
+romania.59.a:0 "트란스니스트리아를 우크라이나에 두는 대신 비무장지대로 만든다."
+romania.59.b:0 "트란스니스트리아는 우리의 것이다!"
+romania.59.c:0 "이건 시작에 불과하다."
 
-romania.60.t:0 "[From.GetName] Offers Peace"
+romania.60.t:0 "[From.GetName]의 휴전 제안"
 romania.60.d:0 "The [From.GetAdjective] armies have conducted a successful invasion of Transnistria. Now their government offers us peace, on the terms that Transnistria will be demilitarised, but will remain in our country. [From.GetAdjective] troops will withdraw to the pre-war border. Refusing this proposal might see even more of our country occupied."
-romania.60.a:0 "Accept the peace treaty."
-romania.60.b:0 "No, the turning point is near!"
-romania.60.tt:0 "Demilitarise Transnistria"
+romania.60.a:0 "휴전 조약을 수락한다."
+romania.60.b:0 "아니다, 전세역전이 코앞이다!"
+romania.60.tt:0 "트란스니스트리아를 비무장지대로 만듭니다"
 romania.60.ms:0 "To prevent further bloodshed §YUkraine§! accepted the offer of §YRomania§! and will demilitarise Transnistria."
 
-romania.61.t:0 "[From.GetName] Offers Peace"
+romania.61.t:0 "[From.GetName]의 휴전 제안"
 romania.61.d:0 "The [From.GetAdjective] armies have conducted a successful invasion of Transnistria. Now their government offers us peace, on the terms that we cede Transnistria to them. Refusing might see even more of our country occupied."
-romania.61.a:0 "Accept the peace treaty."
-romania.61.b:0 "No, the turning point is near!"
-romania.61.tt:0 "Cede Transnistria"
-romania.61.ms:0 "To prevent further bloodshed §YUkraine§! ceded Transnistria to §YRomania§!."
+romania.61.a:0 "휴전 제안을 받아들인다."
+romania.61.b:0 "아니다, 전세역전이 코앞이다!"
+romania.61.tt:0 "트란스니스트리아를 이양합니다"
+romania.61.ms:0 "§Y우크라이나§!의 유혈사태 확대를 막고 §Y루마니아§!에게 트란스니스트리아를 이양합니다."
 
-romania.62.t:0 "[From.GetName] Accepted our Peace Offer"
+romania.62.t:0 "[From.GetName]이(가) 우리의 휴전 제안을 수락했습니다"
 romania.62.d:0 "The [From.GetAdjective] leadership recognised the dire situation they are in and have accepted our peace offer."
 romania.62.a:0 "Great!"
 
-romania.63.t:0 "[From.GetName] Rejects our Peace Offer!"
-romania.63.d:0 "The [From.GetAdjective] leadership refuses to recognise the dire situation they're in and have refused our fair peace offer."
-romania.63.a:0 "Then we'll march to Kiev!"
+romania.63.t:0 "[From.GetName]이(가) 우리의 휴전 제안을 거절했습니다!"
+romania.63.d:0 "[From.GetAdjective] 지도부가 자신들이 곤경에 처한 상황을 받아들이지 못 하고 우리가 보낸 공정한 휴전 제안을 거절했습니다."
+romania.63.a:0 "그렇다면 우린 키예프로 진격한다!"
 
-romania.70.t:0 "The End of Oil Shipments from Romania!"
-romania.70.d:0 "Alarming news has just reached Berlin from our ambassadors in Bucharest. The Romanian oil fields are no longer available meaning that we no longer posses a steady supply of oil. Oil is one of the, if not the most, most vital resources to the German economy. If we do not remedy this situation quick, we could see a decline in industrial output and other nations within Europe may perceive us as weak for being unable to secure what is rightfully ours."
-romania.70.a:0 "Verdammt!"
+romania.70.t:0 "루마니아로 부터의 석유 수송이 중단되었습니다!"
+romania.70.d:0 "부쿠레슈티에 있는 우리의 대사가 베를린에 새소식을 알렸습니다. 루마니아 유전이 고갈되었으며 이는 더이상 우리가 석유를 안정적으로 공급받을 수 없음을 의미합니다. 석유는 독일 경제에 최고로, 아니, 최소한 근간이 되는 자원 중 하나입니다. 만약 우리가 이 상황에 대해 신속히 조치를 취하지 않는다면, 산업 생산량의 감소와 유럽에 있는 다른 국가들이 우리가 정당한 우리의 영토를 수호하지 못 할정도로 약해졌다는 것으로 인식하게 될지도 모릅니다."
+romania.70.a:0 "망할!"
 
-romania.100.t:0 "The Creation of Wallachia"
+romania.100.t:0 "왈라키아 건국"
 romania.100.d:0 "Our recent territorial losses have reduced us to our core territory in Muntenia. As such we can no longer claim to be a nation of all Romanians, and in the eyes of other nations don't have the right to the name of 'Romania'. To not disturb our neighbours and fragile foreign relations, the government has decided to officially adopt the name of the country that was previously centred around this area, Wallachia. This should remind all Romanians of our humble past and encourage them. While our current situation does not look very well, we have prevailed against the odds in the past, and will do so again."
-romania.100.a:0 "We will prevail."
+romania.100.a:0 "우린 잘될 것이다."
 
-romania.101.t:0 "The Creation of Moldovia"
+romania.101.t:0 "몰도바 건국"
 romania.101.d:0 "Our recent territorial losses have reduced us to our territory in Moldova. As such we can no longer claim to be a nation of all Romanians, and in the eyes of other nations don't have the right to the name of 'Romania'. To not disturb our neighbours and fragile foreign relations, the government has decided to officially adopt the name of the country that was previously centred around this area, Moldovia. This should remind all Romanians of our humble past and encourage them. While our current situation does not look very well, we have prevailed against the odds in the past, and will do so again."
-romania.101.a:0 "We will prevail."
+romania.101.a:0 "우린 잘될 것이다."
 
-romania.102.t:0 "The Recreation of Romania"
+romania.102.t:0 "루마니아 복원"
 romania.102.d:0 "We have regained our core territories and now own all of Muntenia and Moldovia. This has redeemed us in the eyes of the world, and while this nation may not be as great as before, we can finally put our past behind us and be proud of our country, Romania!"
-romania.102.a:0 "Finally!"
+romania.102.a:0 "드디어!"
 
-romania.103.t:0 "The New Romanian Regime"
+romania.103.t:0 "새로운 루마니아 정권"
 romania.103.d:0 "Now that Romania is a nominally independent nation again, we need to decide on their government form. Ministers in our cabinet argue for either of two options. The first option is to invite the well-known socialite Antoine Bibesco to rule Romania. He is the grandson of the last ruler of Wallachia and as such bears the title of Prince. Since he lacks a real power base, he would be a loyal ally, but still give some legitimacy to the new regime due to his royal heritage.\n\nThe other option is to invite the former Regent of Romania, Prince Nicholas to form a government. He is the younger brother of the former Crown Prince Carol, who has refused to rule as a puppet king. Under the former military regime Nicholas' position as Regent was already nothing more than a puppet, so it is expected he won't cause trouble, while still nominally continue the rule of the Hohenzollern dynasty."
-romania.103.a:0 "Create a Republic."
+romania.103.a:0 "공화국을 설립한다."
 romania.103.tta:0 "§YAnton Bibescu§! becomes the ruler of a Romanian Republic."
-romania.103.b:0 "Set up a puppet Kingdom."
+romania.103.b:0 "괴뢰 왕국로 만든다."
 romania.103.ttb:0 "§YPrince Nicholas§! becomes the King of Romania."
