--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -6,9 +6,9 @@ FIN_claimed_karelia2:0 "카렐리야 영유권 주장"
 FIN_claimed_murmansk:0 "무르만스크 영유권 주장"
 FIN_claimed_karelia3:0 "카렐리야 영유권 주장"
 FIN_claimed_karelia4:0 "카렐리야 영유권 주장"
-FIN_ally_russia:0 "러시아와 동맹"
-RUS_eastern_europe_focus1:0 "유럽의 방향"
-RUS_eastern_europe_focus2:0 "유럽의 방향"
+FIN_ally_russia:0 "러시아와의 동맹"
+RUS_eastern_europe_focus1:0 "유럽 방향"
+RUS_eastern_europe_focus2:0 "유럽 방향"
 RUS_fin_coalition:0 "핀란드-러시아 연합"
 FAN_ban:0 "금지된 신앙과 민족"
 FAN_support:0 "지원되는 신앙과 민족"
@@ -17,8 +17,8 @@ RUS_expansionism1:0 "러시아 팽창주의"
 RUS_expansionism2:0 "러시아 팽창주의"
 RUS_expansionism3:0 "러시아 팽창주의"
 RUS_expansionism4:0 "러시아 팽창주의"
-RUS_caucasus_focus1:0 "코카서스 방향"
-RUS_caucasus_focus2:0 "코카서스 방향"
+RUS_caucasus_focus1:0 "캅카스 방향"
+RUS_caucasus_focus2:0 "캅카스 방향"
 GER_respect_brest_litovsk1:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
 GER_respect_brest_litovsk2:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
 GER_respect_brest_litovsk3:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
@@ -77,8 +77,8 @@ RUS_greater_armenia_declined:0 "대 아르메니아령 거부되다"
 RUS_granted_greater_armenia:0 "대 아르메니아령 이동되다"
 RUS_far_east_focus1:0 "극동 방향"
 RUS_far_east_focus2:0 "극동 방향"
-RUS_claimed_chinese_central_asia1:0 "중국 중앙 아시아 주장"
-RUS_claimed_chinese_central_asia2:0 "중국 중앙 아시아 주장"
+RUS_claimed_chinese_central_asia1:0 "중국령 중앙아시아를 주장"
+RUS_claimed_chinese_central_asia2:0 "중국령 중앙아시아를 주장"
 RUS_intervene_ally_china:0 "중국과 동맹"
 RUS_intervene_ally_japan:0 "일본과 동맹"
 RUS_intervene_declared_japan1:0 "일본과의 전쟁 선포"
@@ -89,10 +89,10 @@ RUS_ally_china_event1:0 "중국과 동맹"
 RUS_ally_china_event2:0 "중국과 동맹"
 RUS_fight_JAP_alone_event:0 "일본과의 전쟁 선포"
 RUS_ally_japan_accept:0 "우리의 동맹"
-RUS_ally_japan_declined:0 "우리와 동맹을 맺지 않았다"
+RUS_ally_japan_declined:0 "우리와 동맹을 맺지 않음"
 RUS_ally_china_accept:0 "우리의 동맹"
-RUS_ally_china_declined:0 "우리와 동맹을 맺지 않았다"
-RUS_intervene_help_china:0 "도와주었다"
+RUS_ally_china_declined:0 "우리와 동맹을 맺지 않음"
+RUS_intervene_help_china:0 "도움을 제공함"
 #RUS_claim_sinkiang:0 "신장 주장" already defined in Russia foreign loc file
 JAP_abandon_transamur:0 "버림받은 트란스아무르"
 RUS_ally_japan_sakhalin_declined:0 "러시아 제안 거절"
@@ -100,19 +100,19 @@ RUS_ally_japan_sakhalin_accept:0 "러시아 제안 수락"
 RUS_ally_japan_accept_puppets:0 "우리의 동맹"
 RUS_warning_JAP_sever1:0 "절단된 관계"
 RUS_warning_JAP_sever2:0 "절단된 관계"
-RUS_back_down_JAP:0 "트란스아무르에서 패배를 인정"
+RUS_back_down_JAP:0 "트란스아무르에서의 패배를 인정"
 RUS_accept_lost_plebiscite_TRM:0 "잃어버린 투표권을 수락"
 RUS_keep_eye_lost_plebiscite_TRM:0 "잃어버린 투표권을 완전히 받아들이지 않았다"
 RUS_send_army_lost_plebiscite_TRM:0 "트란스아무르에 군대를 보내다"
 JAP_RUS_seize_transamur:0 "러시아가 트란스아무르를 점거"
-JAP_attack_RUS_seize_transamur:0 "우리와의 전쟁 선포"
-RUS_vigilant_churchill1:0 "생디칼리스트 주의자들을 경계해야한다"
-RUS_vigilant_churchill2:0 "생디칼리스트 주의자들을 경계해야한다"
-RUS_denounce_churchill1:0 "생디칼리스트와의 공존"
-RUS_denounce_churchill2:0 "생디칼리스트와의 공존"
-RUS_JAP_send_warning_manchuria:0 "경고를 보내다"
+JAP_attack_RUS_seize_transamur:0 "우리와의 전쟁을 선포함"
+RUS_vigilant_churchill1:0 "생디칼리스트들을 경계"
+RUS_vigilant_churchill2:0 "생디칼리스트들을 경계"
+RUS_denounce_churchill1:0 "생디칼리스트들과 공존"
+RUS_denounce_churchill2:0 "생디칼리스트들과 공존"
+RUS_JAP_send_warning_manchuria:0 "경고를 보냄"
 RUS_back_down_manchuria:0 "만주에서의 퇴각"
-RUS_ignored_warning_manchuria:0 "경고를 무시하다"
+RUS_ignored_warning_manchuria:0 "경고를 무시함"
 RUS_agreed_manchuria:0 "제안을 수락함"
 RUS_denied_manchuria:0 "제안을 거부함"
 RUS_MON_accepted_demand_focus:0 "우리의 요구를 수용하다"
@@ -184,20 +184,20 @@ RUS_claim_syndie_ukraine_focus2:0 "우크라이나 요구"
 RUS_claim_syndie_ukraine_focus3:0 "우크라이나 요구"
 RUS_ally_syndie_ukraine_accept:0 "동맹 요구를 수락하다"
 RUS_ally_syndie_ukraine_denied:0 "동맹 요구를 거부하다"
-RUS_bjorko_pact:0 "비요르코 협약"
+RUS_bjorko_pact:0 "뵤르코 협약"
 RUS_bjorko_pact_continue:0 "우크라이나에서의 지속적인 작전"
 RUS_back_down_bjorko:0 "우크라이나에서의 퇴각"
-RUS_honored_bjorko:0 "비요르코 협약 존중"
-RUS_broke_bjorko:0 "비요르코 협약 파기"
+RUS_honored_bjorko:0 "뵤르코 협약 존중"
+RUS_broke_bjorko:0 "뵤르코 협약 파기"
 RUS_claim_bessarabia_refused:0 "동맹을 거부하다"
-RUS_claim_bessarabia_ally:0 "우리와 동맹상태"
-RUS_claim_bessarabia_support_side:0 "내전 중에 다른 파를 지원하다"
-RUS_claim_bessarabia_accept_support:0 "베사라비아 무역을 지원 하다"
-RUS_claim_bessarabia_refused_support:0 "베사라비아 무역의 지원을 거부하다"
+RUS_claim_bessarabia_ally:0 "우리와 동맹 중"
+RUS_claim_bessarabia_support_side:0 "내전 중 다른 세력을 지원함"
+RUS_claim_bessarabia_accept_support:0 "베사라비아 무역을 지원"
+RUS_claim_bessarabia_refused_support:0 "베사라비아 무역 지원을 거부"
 RUS_claim_bessarabia_ally_cw:0 "우리의 동맹"
 RUS_vladivostok_big:0 "블라디보스토크의 모든 함선을 압류하다"
 RUS_vladivostok_small:0 "트란스아무르의 구 함선을 사용하다"
-RUS_vladivostok_sold:0 "트란스아무르 해군 매각"
+RUS_vladivostok_sold:0 "트란스아무르 해군을 매각하다"
 RUS_ultimatum_galicia1:0 "갈리치아에 최후통첩"
 RUS_ultimatum_galicia_accept:0 "최후통첩을 받아들이다"
 RUS_ultimatum_galicia_refuse:0 "최후통첩을 거부하다"
@@ -299,8 +299,8 @@ RUS_ceded_xibei_china:0 "서북을 중국에 이양하다"
 RUS_ceded_xibei_sinkiang_china:0 "서북과 신장을 중국에 이양하다"
 RUS_let_poland_independent:0 "우리를 독립하게 두다"
 RUS_reintegrate_poland:0 "우리를 재통합하다"
-RUS_established_puyi_manchuria:0 "만주에 푸이를 세우다"
-RUS_not_established_puyi_manchuria:0 "만주에 푸이를 세우지 않다"
+RUS_established_puyi_manchuria:0 "만주에 푸이를 옹립하다"
+RUS_not_established_puyi_manchuria:0 "만주에 푸이를 옹립하지 않다"
 
 ### Ideas ###
 rus_austerity_measures:0 "긴축 조치"
@@ -371,13 +371,13 @@ RUS_Vroom:0 "Limousine 'Triumph'"
 RUS_Dmi_Tri:0 "드미트리 로마노프가 상원을 장악하다"
 RUS_new_russia:0 "신 러시아"
 rus_state_revanchism:0 "국가 보복주의"
-DKU_Integration:0 "돈쿠반 지역 합병"
+DKU_Integration:0 "돈-쿠반 지역 합병"
 ALO_Integration:0 "알라시 대초원 합병"
 TRK_Integration:0 "투르케스탄 합병"
 WHR_Integration:0 "벨로루시 합병"
 EAST_UKR_Integration:0 "동부 우크라이나 합병"
 WEST_UKR_Integration:0 "서부 우크라이나 합병"
-UBD_Integration:0 "발트해 지역 합병"
+UBD_Integration:0 "발트 지역 합병"
 
 ### Parties ###
 RUS_totalist_party:0 "인민해방당"
@@ -389,7 +389,7 @@ RUS_market_liberal_party:0 "입헌민주당"
 RUS_social_conservative_party:0 "러시아 연방"
 RUS_authoritarian_democrat_party:0 "10월당"
 RUS_paternal_autocrat_party:0 "러시아 전 연방"
-RUS_national_populist_party:0 "러시아 인민 공화당"
+RUS_national_populist_party:0 "러시아 인민공화당"
 RUS_totalist_party_long:0 "인민해방당"
 RUS_radical_socialist_party_long:0 "인민사회당"
 RUS_syndicalist_party_long:0 "볼셰비키"
@@ -399,7 +399,7 @@ RUS_market_liberal_party_long:0 "입헌민주당"
 RUS_social_conservative_party_long:0 "러시아 연방"
 RUS_authoritarian_democrat_party_long:0 "10월당"
 RUS_paternal_autocrat_party_long:0 "러시아 전 연방"
-RUS_national_populist_party_long:0 "러시아 인민 공화당"
+RUS_national_populist_party_long:0 "러시아 인민공화당"
 RUS_mensheviks_party:0 "멘셰비키"
 RUS_social_rev_party:0 "사회혁명당"
 RUS_social_rev_party_long:0 "사회혁명당"
@@ -409,8 +409,8 @@ RUS_social_cons_party:0 "민주당"
 RUS_social_cons_party_long:0 "민주당"
 RUS_auth_dem_party:0 "실로비키"
 RUS_auth_dem_party_long:0 "실로비키"
-RUS_tsar_party:0 "러시아 군주 연합"
-RUS_tsar_party_long:0 "러시아 군주 연합"
+RUS_tsar_party:0 "러시아 제정연합"
+RUS_tsar_party_long:0 "러시아 제정연합"
 
 ### Focuses ###
 RUS_KRSKY:0 "케렌스키 대통령"
@@ -477,28 +477,28 @@ RUS_DEM_POL4:0 "민주주의 수호"
 RUS_DEM_POL4_desc:0 "러시아는 민주주의의 수호자로 빠르게 인식되고 있지만, 세계의 다른 곳들에서는 상황이 그리 좋아 보이지 않습니다. 최소한 우리 주변이 온통 적으로 둘러싸이는 지경이 아니라면, 다른 국가들의 민주화 운동이 독재자의 억압에 짓밟히지 않도록 지켜주는 것이 우리의 의무입니다."
 
 RUS_CON_ADM1:0 "새로운 관료제 구축"
-RUS_CON_ADM1_desc:0 "Our economy should, no matter what our government may look like, be governed by faceless but loyal bureaucrats. We need to remove the old Guard of the Kerensky regime and set up something else. Something new."
+RUS_CON_ADM1_desc:0 "우리 정부의 모습이 어떻게 비춰지던간에, 우리의 경제는 청렴하고 충직한 관료들에 의해 다스려져야 합니다. 우리는 케렌스키 정권의 오랜 개들을 몰아내고 다른 무언가를 만들어내야 합니다. 뭔가 새로운 것을 말입니다."
 RUS_CON_ADM2:0 "대중 교육"
-RUS_CON_ADM2_desc:0 "The Russian nation, torn apart by social and political unrest, has been unable to initiate any massive education programs successfully. There's still a large rural population dominating the countryside. A school in every village will allow us to integrate even more people in our society and economy."
-RUS_CON_ADM3:0 "국립 행정 학교"
-RUS_CON_ADM3_desc:0 "With the new bureaucracy steadily growing we should set up a National Administration School which prepares our future army of bureaucrats for the necessary work ahead of them."
-RUS_CON_IND1:0 "사유 재산 장려"
-RUS_CON_IND1_desc:0 "Private property has long been under threat by the Syndicalists and other rabble. Using new laws such as the 'Civil code' and 'Land code', we will be able to strengthen the rights and security of business owners, big and small, in Russia."
+RUS_CON_ADM2_desc:0 "사회적으로, 정치적으로 분열되고 혼란스러운 국가 러시아는 큰 규모의 교육 프로그램을 시작할 여력이 없었습니다. 농촌에는 아직도 농삿일밖에 할 줄 모르는 이들이 수없이 많습니다. 모든 마을에 학교를 설립하고 우리 사회와 경제에 더 많은 사람들을 합류시킬 수 있도록 만듭시다."
+RUS_CON_ADM3:0 "국립 행정대학"
+RUS_CON_ADM3_desc:0 "새로운 관료제가 꾸준히 발전함에 따라, 우리는 미래의 관료들을 양성할 수 있도록 국립 행정대학을 설립해야 합니다."
+RUS_CON_IND1:0 "사유 재산 보호"
+RUS_CON_IND1_desc:0 "민간 사유지는 오랫동안 생디칼리스트들과 여타 다른 폭도들에게 위협받아 왔습니다. 우리는 '재산법' 그리고 '토지법'과 같은 새로운 법률을 제정하여 크고 작은 러시아 사업가들의 권리와 안전을 보장해줄 수 있을 것입니다."
 RUS_CON_IND2:0 "농업 기계화"
-RUS_CON_IND2_desc:0 "A majority of all Russian farms in the nation are still worked on with hands and hooves. This has kept Russian economy stagnated for long enough, a large state-sponsored mechanisation must be initiated!"
-RUS_CON_IND3:0 "여단 조직"
-RUS_CON_IND3_desc:0 "With the much-needed mechanisation initiated we should set up new factories. With less and less farmhands needed on the countryside we should organise temporary construction teams called 'Construction brigades' and put these young, able men to work at our factory lines."
+RUS_CON_IND2_desc:0 "러시아의 많은 농장들은 여전히 손과 말발굽에 의해 경작되고 있습니다. 이러한 비효율은 대단히 오랜 시간동안 러시아 경제를 침체시켜 왔고, 따라서 국가가 지원하는 대대적인 기계화가 시작되어야만 합니다!"
+RUS_CON_IND3:0 "건설 단체"
+RUS_CON_IND3_desc:0 "절실히 필요했던 기계화가 드디어 진행되면서 시골 지역에 필요한 농사꾼의 수가 점점 줄어들었기에, 이들에게 일자리를 제공할 필요성이 대두되었습니다. 우리는 '건설 단체'라고 불리는 임시 건설업 조직을 만들고 이 젊고 유능한 이들이 우리의 생산 라인에서 일할 수 있도록 해야 합니다."
 RUS_CON_POL1:0 "새로운 헌법"
-RUS_CON_POL1_desc:0 "With the monarch in place we would need a new constitution which clearly outlines the amount of influence the monarch should have in comparison to the senate and the Duma. This is a time of change and many voices wish to be heard."
-RUS_CON_POL2:0 "제국 자유 학술원"
-RUS_CON_POL2_desc:0 "As our constitution guarantees some rights for our citizens, the state control of the academia has loosened up. This allows scientists, no matter of their political background, to focus solely on their research without having to fear the secret police."
+RUS_CON_POL1_desc:0 "군주제가 어느 정도 자리를 잡게 되면서, 우리는 상원, 두마와 비교해 차르가 가지게 될 권한을 명문화시킬 새로운 헌법이 필요합니다. 지금은 변혁의 시기이고, 많은 이들이 본인의 주장을 들어주기를 원하고 있습니다."
+RUS_CON_POL2:0 "제국의 자유로운 학문"
+RUS_CON_POL2_desc:0 "우리의 헌법이 시민들에게 여러 권리들을 보장해줌에 따라, 학계에 대한 국가의 통제가 느슨해졌습니다. 이것은 과학자들이 그들의 정치적 배경 때문에 비밀경찰을 두려워할 필요 없이 오로지 연구에만 집중할 수 있게 해줄 것입니다."
 RUS_CON_POL3:0 "자비로운 차르"
-RUS_CON_POL3_desc:0 "The idea of the Tsar being a feared tyrant is a thing of the past. Our Tsar is beloved and benevolent, like a stern but loving father who looks after us all."
-RUS_CON_POL4:0 "충성스러운 백성"
-RUS_CON_POL4_desc:0 "In every home of Russia, people hang a photo of the Tsar and his family upon the wall. Whenever the Tsar participates in a public event, he is cheered and beloved. He stands above party politics and is a symbol of our unity."
+RUS_CON_POL3_desc:0 "차르가 폭군으로 여겨지던 것은 이제 옛날 이야기입니다. 우리의 차르는 엄격한 아버지처럼 우리를 보살피지만, 동시에 자비로운 아버지처럼 우리를 사랑합니다."
+RUS_CON_POL4:0 "충직한 백성들"
+RUS_CON_POL4_desc:0 "러시아의 모든 가정에서, 사람들은 차르와 황실 구성원들의 사진을 벽에 걸어놓습니다. 차르가 공식 행사에 참여할 때마다, 그는 열렬히 환호받고 사랑받습니다. 그는 당과 이념을 초월하여 우리의 단합을 상징합니다."
 
 RUS_TSAR_POL1:0 "차르의 목소리"
-RUS_TSAR_POL1_desc:0 "러시아의 새로운 차르는 현대적인 수사뿐만이 아니라 대중들에게 연설하는 것 역시도 즐깁니다. 울려 퍼지는 그의 목소리는 모두에게 진정한 적은 러시아 밖에 있다는 것을 상기시킵니다. 바로 질투심 때문에 러시아의 전통을 훼손하려는 외국인들 말입니다."
+RUS_TSAR_POL1_desc:0 "러시아의 새로운 차르는 현대적인 수사뿐만이 아니라 대중들에게 연설하는 것 역시도 즐깁니다. 울려퍼지는 그의 목소리는 모두에게 진정한 적은 러시아 밖에 있다는 점을 상기시킵니다. 바로 질투심 때문에 러시아의 전통을 훼손하려는 외부 세력들 말입니다."
 RUS_TSAR_POL2:0 "신 슬라브주의"
 RUS_TSAR_POL2_desc:0 "모든 슬라브인들은, 그들이 어디에 살고 있든 러시아인의 형제입니다. 만약 형제들이 부당한 압제를 받고 있다면, 그들을 해방시키고 그들의 국가를 우리 제국에 통합하는 것은 러시아의 권리, 아니 의무입니다."
 RUS_TSAR_POL3:0 "삶의 질 개선"
