--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -5413,10 +5413,10 @@ PRF_social_conservative:0 "하이데라바드"
 PRF_social_conservative_ADJ:0 "하이데라바드"
 PRF_social_conservative_DEF:0 "하이데라바드"
 PRF_authoritarian_democrat:0 "토후 연맹"
-PRF_authoritarian_democrat_ADJ:0 "왕후"
+PRF_authoritarian_democrat_ADJ:0 "토후"
 PRF_authoritarian_democrat_DEF:0 "토후 연맹"
 PRF_paternal_autocrat:0 "토후 연맹"
-PRF_paternal_autocrat_ADJ:0 "왕후"
+PRF_paternal_autocrat_ADJ:0 "토후"
 PRF_paternal_autocrat_DEF:0 "토후 연맹"
 PRF_national_populist:0 "데칸 제국"
 PRF_national_populist_ADJ:0 "데칸"
