--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -735,43 +735,43 @@ GBR_bra_syndicalist_DEF:0 "브리튼 연방"
 GBR_bra_radical_socialist:0 "브리튼 연방"
 GBR_bra_radical_socialist_ADJ:0 "브리튼"
 GBR_bra_radical_socialist_DEF:0 "브리튼 연방"
-GBR_bra_social_democrat:0 "브리튼 재건 위원회"
-GBR_bra_social_democrat_ADJ:0 "브리튼"
-GBR_bra_social_democrat_DEF:0 "브리튼 재건 위원회"
-GBR_bra_social_liberal:0 "브리튼 재건 위원회"
-GBR_bra_social_liberal_ADJ:0 "브리튼"
-GBR_bra_social_liberal_DEF:0 "브리튼 재건 위원회"
-GBR_bra_market_liberal:0 "브리튼 재건 위원회"
-GBR_bra_market_liberal_ADJ:0 "브리튼"
-GBR_bra_market_liberal_DEF:0 "브리튼 재건 위원회"
-GBR_bra_social_conservative:0 "브리튼 재건 위원회"
-GBR_bra_social_conservative_ADJ:0 "브리튼"
-GBR_bra_social_conservative_DEF:0 "브리튼 재건 위원회"
-GBR_bra_authoritarian_democrat:0 "브리튼 재건 위원회"
-GBR_bra_authoritarian_democrat_ADJ:0 "브리튼"
-GBR_bra_authoritarian_democrat_DEF:0 "브리튼 재건 위원회"
-GBR_bra_paternal_autocrat:0 "브리튼 재건 위원회"
-GBR_bra_paternal_autocrat_ADJ:0 "브리튼"
-GBR_bra_paternal_autocrat_DEF:0 "브리튼 재건 위원회"
-GBR_bra_national_populist:0 "브리튼 재건 위원회"
-GBR_bra_national_populist_ADJ:0 "브리튼"
-GBR_bra_national_populist_DEF:0 "브리튼 재건 위원회"
+GBR_bra_social_democrat:0 "영국 재건 당국"
+GBR_bra_social_democrat_ADJ:0 "영국"
+GBR_bra_social_democrat_DEF:0 "영국 재건 당국"
+GBR_bra_social_liberal:0 "영국 재건 당국"
+GBR_bra_social_liberal_ADJ:0 "영국"
+GBR_bra_social_liberal_DEF:0 "영국 재건 당국"
+GBR_bra_market_liberal:0 "영국 재건 당국"
+GBR_bra_market_liberal_ADJ:0 "영국"
+GBR_bra_market_liberal_DEF:0 "영국 재건 당국"
+GBR_bra_social_conservative:0 "영국 재건 당국"
+GBR_bra_social_conservative_ADJ:0 "영국"
+GBR_bra_social_conservative_DEF:0 "영국 재건 당국"
+GBR_bra_authoritarian_democrat:0 "영국 재건 당국"
+GBR_bra_authoritarian_democrat_ADJ:0 "영국"
+GBR_bra_authoritarian_democrat_DEF:0 "영국 재건 당국"
+GBR_bra_paternal_autocrat:0 "영국 재건 당국"
+GBR_bra_paternal_autocrat_ADJ:0 "영국"
+GBR_bra_paternal_autocrat_DEF:0 "영국 재건 당국"
+GBR_bra_national_populist:0 "영국 재건 당국"
+GBR_bra_national_populist_ADJ:0 "영국"
+GBR_bra_national_populist_DEF:0 "영국 재건 당국"
 
 GBR_britain_totalist:0 "브리튼 연방"
-GBR_britain_totalist_ADJ:0 "영국"
-GBR_britain_totalist_DEF:0 "the 브리튼 연방"
+GBR_britain_totalist_ADJ:0 "브리튼"
+GBR_britain_totalist_DEF:0 "브리튼 연방"
 GBR_britain_syndicalist:0 "브리튼 연방"
-GBR_britain_syndicalist_ADJ:0 "영국"
-GBR_britain_syndicalist_DEF:0 "the 브리튼 연방"
+GBR_britain_syndicalist_ADJ:0 "브리튼"
+GBR_britain_syndicalist_DEF:0 "브리튼 연방"
 GBR_britain_radical_socialist:0 "브리튼 연방"
-GBR_britain_radical_socialist_ADJ:0 "영국"
+GBR_britain_radical_socialist_ADJ:0 "브리튼"
 GBR_britain_radical_socialist_DEF:0 "브리튼 연방"
 GBR_britain_social_democrat:0 "영국"
 GBR_britain_social_democrat_ADJ:0 "영국"
 GBR_britain_social_democrat_DEF:0 "영국"
 GBR_britain_social_liberal:0 "영국"
 GBR_britain_social_liberal_ADJ:0 "영국"
-GBR_britain_social_liberal_DEF:0 "the 영국"
+GBR_britain_social_liberal_DEF:0 "영국"
 GBR_britain_market_liberal:0 "영국"
 GBR_britain_market_liberal_ADJ:0 "영국"
 GBR_britain_market_liberal_DEF:0 "영국"
