--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1002,7 +1002,7 @@ AUP_GER_totalist_DEF:0 "독일 제국"
 
 CZE_habsburg_totalist:0 "보헤미아 사회주의 공화국"
 CZE_habsburg_totalist_ADJ:0 "보헤미아"
-CZE_habsburg_totalist_DEF:0 "the 보헤미아 사회주의 공화국"
+CZE_habsburg_totalist_DEF:0 "보헤미아 사회주의 공화국"
 CZE_habsburg_syndicalist:0 "보헤미아 사회주의 공화국"
 CZE_habsburg_syndicalist_ADJ:0 "보헤미아"
 CZE_habsburg_syndicalist_DEF:0 "보헤미아 사회주의 공화국"
