--- a/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
@@ -215,7 +215,7 @@ SRI_cement_congres_authority:0 "의회의 권위 아래 결속"
 SRI_cement_congres_authority_desc:0 "공화국을 강화시켰기 때문에, 의회는 결속하면서 동시에 내전 이래로 공화국을 위협했던 분열을 좋게 해결할 수 있었습니다. 물론 내부 분열과 연맹은 계속 있겠지만, 더 이상 그런 요소들로 공화국이 파괴될 걱정을 할 필요가 없어졌습니다."
 SRI_streghten_the_chairman:0 "Strengthen the Chairman"
 SRI_streghten_the_chairman_desc:0 "In order for the republic to be Strong, the power of the Chairman must be strong. How can we help the people without the guiding hand of the chairman? And the congress is just an attempt to bring back bourgeoisie parliamentarianism, but the Chairman shall rule, and the anarchist principals of the revolution shall be upheld."
-SRI_state_atheism:0 "State Atheism"
+SRI_state_atheism:0 "국가 무신론"
 SRI_state_atheism_desc:0 "Superstition has no place in the Italian Republic. Gods and prophets and made up lives by men to deceive man is not needed in the modern age. Religion is something that keeps men in chains, drugged by the opiate of the masses but we shall break the chains that religion has placed upon us. We shall enforce State Atheism for religion has no place within the republic."
 SRI_rouse_the_people:0 "Rouse the People"
 SRI_rouse_the_people_desc:0 "We must rouse all the people of Italy to build the new Italy and spread the revolution. All of Italia must be united. The people must join together in this fight and the many fights that shall come afterwards!"
@@ -225,11 +225,11 @@ SRI_permanet_revolution:0 "Permanent Revolution"
 SRI_permanet_revolution_desc:0 "The revolution must not stop within Italy itself it must go further. As long as capitalism and reactionary forces exist, the republic is not safe and the people of the world are kept in bondage. But we shall spread the flame of revolution!"
 SRI_squadrismo:0 "Squadrismo"
 SRI_squadrismo_desc:0 "The Nazionalistas have long promoted politically motivated workers to form militias indirectly under the chairman's control. This practice, known as Squadrismo should be enshrined in law."
-SRI_labor_camps:0 "Labour Camps"
+SRI_labor_camps:0 "노동 교화소"
 SRI_labor_camps_desc:0 "Reactionaries and other enemies of the state need not be completely eliminated. They can be organised into bands of labourers, doing the harshest of jobs, under the supervision of our commissars. Perhaps through such work they can develop a more correct mindset."
 SRI_futurist_culture:0 "Futurist Culture"
 SRI_futurist_culture_desc:0 "The futurist movement has become increasingly prominent in our nation. Futurism encourages the total transformation of society for the promotion of the greater good and the rapid development of industry. We should encourage the movement as it aligns closely with our own goals."
-SRI_cultural_revolution:0 "Grande Rivoluzione Culturale Proletaria"
+SRI_cultural_revolution:0 "프롤레티아 문화 "
 SRI_cultural_revolution_desc:0 "Reactionary elements still plague our society, and like rats, when one is purged, a dozen more seem to scurry out from under the woodwork. We must endeavour to eliminate them entirely in one fell swoop."
 SRI_revolutionary_commisars:0 "Revolutionary Commissars"
 SRI_revolutionary_commisars_desc:0 "Our armed forces, while brave and good, could be easily misled by reactionary elements. By establishing a core group of undoubtedly loyal soldiers and officers and embedding them in our military, we can ensure that our men remain loyal."
@@ -517,9 +517,9 @@ socitaly.18.b:0 "협상을 위한 노력을 계속한다.."
 
 ### Neo Sanfedisti ###
 
-socitaly.19.t:0 "Suppression of Catholics"
+socitaly.19.t:0 "가톨릭에 대한 탄압"
 socitaly.19.d:0 "A number of highly-placed Catholics who have been deemed at risk for supporting the Papacy over their own government were recently rounded up by the Republican Guard today and placed in prison until such a time as they can be properly vetted. It's a move that's sure to outrage other Catholics in the republic, but should any trouble arise the presence of so many ready informants will ensure it's dealt with far more readily than it might be otherwise."
-socitaly.19.a:0 "It must be done, for the greater good"
+socitaly.19.a:0 "대의를 위해서, 마쳐야하는 일이다."
 
 socitaly.20.t:0 "Northern Catholics Suppressed"
 socitaly.20.d:0 "In a move that comes as a confirmation to many of the evils of syndicalism, the syndicalist government recently rounded up scores of Catholic faithful – anyone whose allegiances might be suspect, and who might have been an ally to the pope – and placed them in prison pending eventual interrogation. It's a move which has spurred resentment in the south, and renewed calls for war."
@@ -979,6 +979,6 @@ socitaly.124.t:0 "End of the Cultural Revolution"
 socitaly.124.d:0 "Tragically Mussolini has died in a plane crash and with his death, Michele Bianchi has assumed control of the Republic. With Mussolini's death, Bianchi has declared that the Cultural Revolution has been victorious and as such, it should come to an end. With its end, he has begun to slowly scale back some of the 'reforms' that were passed during the Revolution, notably the enforcement of futurist food."
 socitaly.124.a:0 "The Revolution is over"
 
-socitaly.125.t:0 "혁명의 끝"
+socitaly.125.t:0 "문화 혁명의 끝"
 socitaly.125.d:0 "무솔리니가 로마에서 선언한 혁명이 끝났으며, 공화국이 선포된 이래로 이탈리아를 물들인 반동주의적인 문화가 사라지게 됬습니다. 오늘은 이탈리아에 새로운 햇볕이 내리쬐는 날입니다. 이 선언으로 단조로운 폭력들이 점차 사라지게 될 것입니다. 무솔리니는 삶은 바뀔지언정 최소한 국가가 부강하게 될 것이라고 말했습니다. 무솔리니의 권력은 이제 절대적이라는 것이 분명합니다."
 socitaly.125.a:0 "혁명은 끝났다"
