--- a/Kaiserreich Korean Translation/localisation/KR_Tuscany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Tuscany_l_english.yml
@@ -2,18 +2,18 @@ l_english:
 
 ### Party Names ###
 
-TUS_totalist_party:0 "Italia Unita"
-TUS_totalist_party_long:0 "Italia Unita"
-TUS_syndicalist_party:0 "UST"
-TUS_syndicalist_party_long:0 "Unione Sindacale Toscana"
-TUS_radical_socialist_party:0 "PSR"
-TUS_radical_socialist_party_long:0 "Partito Socialista Riformista"
-TUS_social_democrat_party:0 "PPT"
-TUS_social_democrat_party_long:0 "Partito Popolare Toscano"
-TUS_social_liberal_party:0 "PSL"
-TUS_social_liberal_party_long:0 "Partito Social Liberale"
-TUS_market_liberal_party:0 "PL"
-TUS_market_liberal_party_long:0 "Partito Liberale"
+TUS_totalist_party:0 "이탈리아 통일당"
+TUS_totalist_party_long:0 "이탈리아 통일당"
+TUS_syndicalist_party:0 "토스카나 생디칼리스트 연합"
+TUS_syndicalist_party_long:0 "토스카나 생디칼리스트 연합"
+TUS_radical_socialist_party:0 "사회개혁주의당"
+TUS_radical_socialist_party_long:0 "사회개혁주의당"
+TUS_social_democrat_party:0 "토스카나 인민당"
+TUS_social_democrat_party_long:0 "토스카나 인민당"
+TUS_social_liberal_party:0 "사회자유당"
+TUS_social_liberal_party_long:0 "사회자유당"
+TUS_market_liberal_party:0 "자유당"
+TUS_market_liberal_party_long:0 "자유당"
 TUS_social_conservative_party:0 "LC"
 TUS_social_conservative_party_long:0 "Lega Cattolica"
 TUS_authoritarian_democrat_party:0 "Senato dei Quarantotto"
