--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -131,7 +131,7 @@ GEA_fleet_2_desc:0 "구축함은 현대 해군의 중추입니다. 우리는 이
 GEA_battlecruiser1:0 "해양 사령부"
 GEA_battlecruiser1_desc:0 "동아시아 함대 제일의 우선 순위는 유사시 일본 해군 전력을 격퇴하는 것입니다. 이것은 우리의 교리적 노력이 그들의 약점을 이용하는데 집중되어야 한다는 것을 의미합니다. 일본은 괴뢰국과 소유주의 수입에 크게 의존하고 있습니다. 따라서 무역 혼란을 목표로 한다면 우리는 엄청난 타격을 입힐 수 있습니다."
 GEA_battlecruiser2:0 "식민지 전함"
-GEA_battlecruiser2_desc:0 "더 큰 전함들이 독일 해군의 주력인 반면, 현지의 동아시아 조선소는 거대한 조선소와 독일 본토가 가지고있는 철강에 대한 접근성이 부족합니다. 따라서 우리는 중무장하고 가벼운 장갑을 가진 빠른 전함의 사용을 더욱 확대하고자 합니다."
+GEA_battlecruiser2_desc:0 "더 큰 전함들이 독일 해군의 주력인 반면, 현지의 동아시아 조선소는 거대한 조선소와 독일 본토가 가지고있는 철강에 대한 접근성이 부족합니다. 따라서 우리는 중무장하고 가벼운 장갑을 가진 고속전함의 사용을 더욱 확대하고자 합니다."
 GEA_strikegroup1:0 "항공 학교"
 GEA_strikegroup1_desc:0 "독일 교리에서는 해군 항공대의 유일한 목적은 정찰에 있다고 주장하지만, 대제독은 군대의 배치에 대해 놀라울 정도로 자유를 누리고 있습니다. 이를 위해 그가 그렇게 선택한다면 베를린에서 논란을 불러일으킬 것이 확실하지만 공군력이 미래의 해군력이 될 수 있다는 사고 방식의 학교에 훨씬 더 많은 시간을 투자할 수 있습니다."
 GEA_strikegroup2:0 "경순양함"
@@ -533,11 +533,11 @@ GEA_New_Shipbuilding_Methods_idea:0 "새로운 조선 공법"
 GEA_Anti_Invasion_Plan_idea:0 "침략 방지 계획"
 GEA_Absolute_Defense_Sphere_idea:0 "절대방어권"
 GEA_plantations_negotiation_idea:0 "플랜테이션 노동자와 협상"
-GEA_falling_price_idea:0 "Falling Price"
-GEA_conrol_price_idea:0 "Price Control Efforts"
+GEA_falling_price_idea:0 "물가 하락"
+GEA_conrol_price_idea:0 "물가 통제 노력"
 GEA_pacific_rule_idea:0 "태평양 지배"
 GEA_vietcong_killer_idea:0 "베트콩 킬러"
 GEA_vietcong_killer_idea_desc:0 "도망치는 자는 베트콩이다! 자리를 지키는 자는 잘 훈련된 베트콩이다!"
 #jungle_warfare:0 "Jungle Combat Training" Redundant with Siamese fiels
-GEA_jungle_tt:0 "§GJungle Combat Training§! will help better enhance our ability to fight in the jungle.\n"
+GEA_jungle_tt:0 "§G정글 전투 훈련§! 은 정글 전투 능력을 향상시켜줄 수 있습니다.\n"
 GEA_jungle_warfare_effect:0 "Enables §HJungle Combat Training§!\n§HAll legged units\n    Jungle§!\n      Attack: §G+10%§!\n      Defence: §G+5%§!\n      Movement: §G+5%§!\n\n"
